--- a/gallery/animagine-xl.yaml
+++ b/gallery/animagine-xl.yaml
@@ -5,5 +5,6 @@ config_file: |
   backend: diffusers
   f16: true
   diffusers:
+    pipeline_type: StableDiffusionXLPipeline
     cuda: true
     scheduler_type: "euler_a"
